--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/HemanthReddy17/expense-app-server/issues"
   },
-  "homepage": "https://github.com/HemanthReddy17/expense-app-server#readme"
+  "homepage": "https://github.com/HemanthReddy17/expense-app-server#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.8.7",
+    "nodemon": "^2.0.2"
+  }
 }
